--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </div>
 
       <div id="bottom-bar" class="bottom-bar">
-        <div class="text-light" id="tokens"><span id="round">Round</span>: <span id="round-count"></span> | <span id="tokens">Tokens</span>: <span id="token-count"></span></div>        
+        <div class="text-light" id="tokens"><span id="round">Round</span>: <span id="round-count"></span> | <span id="tokens-label">Tokens</span>: <span id="token-count"></span></div>        
       </div>
       <div id="result" class="result"></div>
     </section>
