--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
       <fieldset>
         <legend class="title text-light" id="ver">Game version</legend>
         <div class="flex-row">
-          <button class="btn" id="base-ver-btn">Base</button>
-          <button class="btn" id="adult-ver-btn">18+</button>
-          <button class="btn" id="lang-ver-en">EN</button>
-          <button class="btn" id="lang-ver-ua">UA</button>
-          <button class="btn" id="lang-ver-ru">RU</button>
+          <div class="flex-row">
+            <button class="btn" id="base-ver-btn">Base</button>
+            <button class="btn" id="adult-ver-btn">18+</button>
+          </div>
+          <div class="flex-row">
+            <button class="btn" id="lang-ver-en">EN</button>
+            <button class="btn" id="lang-ver-ua">UA</button>
+            <button class="btn" id="lang-ver-ru">RU</button>
+          </div>
         </div>
       </fieldset>
       <fieldset>
