--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="icon" href="./icon-192.png">
   <meta name="theme-color" content="#ffffff">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
 <body>
   <section class="app" id="app">
